Fixed edit button not being clickable because of overlapping with text

--- a/frontend/src/app/start/EventServices/event-service-detail/event-service-detail.page.scss
+++ b/frontend/src/app/start/EventServices/event-service-detail/event-service-detail.page.scss
@@ -47,6 +47,7 @@ ion-text{
   cursor: pointer;
   border-radius: 5px;
   --box-shadow: none;
+  z-index: 10;
 }
 .itemForm{
   border: 1px solid #d0d0d0;
